--- a/views/exercises_page.haml
+++ b/views/exercises_page.haml
@@ -9,7 +9,7 @@
           %i.icon-double-angle-right
 
 #notes-modal.modal.hide.fade
-  .modal-header
+  .modal-header#notes-modal-header
     %button{:type => "button", :class => "close", :"data-dismiss" => "modal", :"aria-hidden" => "true"} &times;
   .modal-body#notes-modal-body
     %table.table.wide_table.table-striped.table-bordered
