Implemented given view and sorted tl links
Implemented the scraping of the given pages and a bootstrap modal view
for the links. Peter's probably gonna want to clean this the hell up but
it should be pretty solid.

Timeline had big problem as to how to access the functionality of the
modal views etc that had already been implemented. Fixed that by
changing what's sent in with the moment- if it receives a string then
it'll go ahead and set the href property, and prevent propagation on the
click event. If however the value in the moment for the given key is an
object, then assume it's a jquery element and send it a click trigger,
activating all the functionality within the sealed Classy script without
any code duplication and/or unnecessary function exposure.

Quite happy with this, just need to figure out how to integrate this
into other pages (ie the dashboard) without having to copy in some
pointless stuff.

TODO - Implement on the dashboard page, finally.
     - Work on scraping the handin page and create a nice modal view for
       the content entry. Could make it look so much nicer than it does,
       and on doing that we will have covered all the Givens, Notes,
       Specs and Handins. Last thing to be done for the exercise page
       scraping wise.
     - Sort out ideas for how to integrate the timeline into the
       existing timetable page so as to provide a viewing option instead
       of something forced.
     - Work on some colour coding! Get the tables to colour code the
       exercises that are in over the next week in orange, and those
       that are in tomorrow/today in red. Gonna need to add
       functionality to pick off the due TIME also, seeing as that's
       pretty important.
     - Better dashboard, but that's for a different branch.

WISHLIST - Get interation between the exercise tables and the timelines,
           ie click on exercise, timeline counterpart expands. Would be
           pretty cool.

--- a/views/classy_cate.coffee.erb
+++ b/views/classy_cate.coffee.erb
@@ -231,11 +231,6 @@ extract_exercise_page_data = (html) ->
           end : end, moduleName : module.name
           name : $(ex_cell).text()[(id.length + type.length + 2)..].replace(/^\s+|\s+$/g,'')
           mailto : mailto, spec : spec, givens : givens, handin : handin
-          toString : ->
-            '  id:"'+@id+'", type:"'+@type+'", name:"'+@name+'", handin:"'+@handin + '"' +
-            '\n  start: new Date('+@start.getTime()+'), end: new Date('+end.getTime()+')'+
-            '\n  spec:"'+spec+'", givens:"'+givens+
-            '"\n,'
         }
 
         module.exercises.push(exercise_data)
@@ -314,6 +309,28 @@ extract_notes_page_data = (html) ->
 # Givens Page for Exercise
 # html - A jQuery object representing the page body
 extract_givens_page_data = (html) ->
+
+  categories = []
+
+  # Select the tables
+  html.find('table [cellpadding="3"]')[2..].each(->
+    category = {}
+    if $(this).find('tr').length > 1  # Only process tables with content
+      category.type = $(this).closest('form').find('h3 font').html()[..-2]
+      rows = $(this).find('tr')[1..]
+      category.givens = []
+      for row in rows
+        if (cell = $(row).find('td:eq(0) a')).attr('href')?
+          category.givens.push {
+            title : cell.html()
+            link  : cell.attr('href')
+          }
+      categories.push category
+    )    
+
+  # Return an array of categories, each element containing a type and rows
+  # categories = [ { type = 'TYPE', givens = [{title, link}] } ]
+  return categories
 
 
 
@@ -450,11 +467,23 @@ populate_exercises_page = (vars) ->
 
     if ex.spec?
       (specCell = row.find('.spec')).text('')
-      $(document.createElement('a')).attr('href',ex.spec).html('Spec Link').appendTo(specCell)
+      ex.spec_element = $(document.createElement('a')).attr('href',ex.spec).html('Spec Link').appendTo(specCell)
 
     if ex.givens?
       givensCell = row.find('.given').text('')
-      $(document.createElement('a')).attr('href',ex.givens).html('Givens').appendTo(givensCell)
+      ex.given_element = $(document.createElement('a')).attr('href',ex.givens)
+        .html('Givens').appendTo(givensCell)
+        .data('ex_title', row.find('.name').text())
+        .bind 'click', (e) ->
+          e.preventDefault()
+          url = $(this).attr 'href'
+          $('#active_given').removeAttr 'id'
+          $(this).attr 'id', 'active_given'
+          load_cate_page url, (body) ->
+            givens_data = extract_givens_page_data(body)
+            populate_givens(givens_data, $('#active_given').data('ex_title'))
+            $('#givens-modal').modal('show')
+
 
   destination_div = $('#page-content')
   modules = vars.modules
@@ -471,7 +500,7 @@ populate_exercises_page = (vars) ->
       note_link.bind 'click', (e) ->
           e.preventDefault()
           url = $(this).attr 'href'
-          $('#active_note').attr 'id', ''
+          $('#active_note').removeAttr 'id'
           $(this).attr 'id', 'active_note'
           load_cate_page url, (body) ->
             notes_data = extract_notes_page_data(body)
@@ -491,12 +520,10 @@ populate_exercises_page = (vars) ->
       extendedTitle : ['name']
       content :
         names : ['HAND IN', 'SPEC', 'GIVENS']
-        keys : ['handin', 'spec', 'givens']
+        keys : ['handin', 'spec', 'given_element']
     }
 
     if module.id == '113' 
-      console.log 'here we go'
-      console.log vars.start + ' ' + vars.end + ' ' + module.exercises.length
       create_timeline
         start_date : vars.start, end_date : vars.end, destination : destination_div
         structure : structure, moments : module.exercises
@@ -510,7 +537,6 @@ populate_exercises_page = (vars) ->
 populate_notes = (notes_data, header) ->
   notes_header = $('#notes-modal-header')
   notes_header.find('h3').remove()
-  console.log header
   notes_header.append("<h3>#{header}</h3>")
   notes_body = $("#notes-modal-tbody")
   notes_body.html('')
@@ -523,6 +549,24 @@ populate_notes = (notes_data, header) ->
       row.append("<td><a href='#{note.link}'>#{note.title}</a></td>")
     notes_body.append(row)
 
+populate_givens = (givens_data, header) ->
+  # givens_data = [ { type = 'TYPE', givens = [{title, link}] } ]
+  givens_header = $('#givens-modal-header')
+  givens_header.find('h3').remove()
+  givens_header.append("<h3>#{header}</h3>")
+  givens_table = $('#givens-table')
+  givens_table.html('')
+  for category in givens_data
+    head = $('<thead/>').append $("<tr><th><h4>#{category.type}</h4></th></tr>")
+    head.append $('<tr><th class="id">ID</th><th>Link</th></tr>')
+    tbody = $('<tbody/>')
+    for given, i in category.givens
+      row = $('<tr/>')
+      row.append("<td>#{i+1}</td>")
+      row.append("<td><a href='#{given.link}'>#{given.title}</a></td>")
+      tbody.append row
+    givens_table.append(head)
+    givens_table.append(tbody)
 
 populate_grades_page = (vars) ->
 
