--- a/views/classy_cate.less
+++ b/views/classy_cate.less
@@ -120,8 +120,8 @@ td.set, td.due, td.spec, td.given {
 #notesContent th {
   height : 35px;
 }
-#notesContent th.id {
-  width : 25%;
+#notesContent th.id, #givens-table th.id {
+  width : 15px;
 }
 
 .term-navigation {
