--- a/views/timeline.less
+++ b/views/timeline.less
@@ -9,7 +9,7 @@
 .spine {
 	position : absolute; height : 1px; top : 50%;
 	background-color : black;
-} .origin {cursor : pointer;}
+} .origin {cursor : pointer; z-index : 99;}
 
 /* Styling for all circles, need absolute and default 10 z-index */
 .circle {
