Made my heroku changes

--- a/views/classy_cate.user.js.erb
+++ b/views/classy_cate.user.js.erb
@@ -1,17 +1,17 @@
-// ==UserScript==
-// @name         Classy CATE - Timeline TESTING
-// @author       Peter Hamilton
-// @description  CATE Hurts eyes. This makes it hurt them less.
-// @version <%= settings.userscript_version %>
-// @match https://cate.doc.ic.ac.uk/*
-// ==/UserScript==
+// ==UserScript== 
+// @name Classy CATE - Timeline TESTING 
+// @author Peter Hamilton 
+// @description CATE Hurts eyes. This makes it hurt them less. 
+// @version 1.2 
+// @match https://cate.doc.ic.ac.uk/* 
+// ==/UserScript== 
 
 function main() {
     window.classy_cate_script_version = "1.2";
     $('head').append('<script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>');
     //$('head').append('<script type="text/javascript" src="https://classy-cate.herokuapp.com/classy-cate.js"></script>');
-    $('head').append('<script type="text/javascript" src="https://localhost:4567/classy-cate.js"></script>');  //dev mode
-    $('head').append('<script type="text/javascript" src="https://localhost:4567/timeline.js"></script>');  //dev mode
+    $('head').append('<script type="text/javascript" src="https://classy-cate-timeline-dev.herokuapp.com/classy-cate.js"></script>');  //dev mode
+    $('head').append('<script type="text/javascript" src="https://classy-cate-timeline-dev.herokuapp.com/timeline.js"></script>');  //dev mode
 }
 
 // a function that loads jQuery and calls a callback function when jQuery has finished loading
