--- a/views/classy_cate.less
+++ b/views/classy_cate.less
@@ -133,4 +133,21 @@ td.set, td.due, td.spec, td.given {
   width: 100%;
 }
 
+.timeline_toggle {
+  float : right;
+  margin-top : 6px;
+  cursor : pointer;
+}
 
+.timeline_toggle:hover {
+  color : #0988BD;
+}
+
+div[class="tooltip-inner"] {
+  font-weight : normal;
+  line-height : 20px;
+}
+
+.timeline_slider {
+  position : relative; width : 100%;
+}
