--- a/views/timeline.less
+++ b/views/timeline.less
@@ -94,7 +94,7 @@
 	box-shadow : 0 0 3px grey; cursor : pointer; 
 	-webkit-box-shadow : 0 0 3px grey; line-height: 20px;
 	background-color : #fcfcfc; white-space : nowrap;
-	height : auto; width : auto;
+	height : auto; width : auto; min-height: 20px;
 }
 
 .info_elem.collapsed {
