Implemented a fresher dashboard, fixed term selection

--- a/views/classy_cate.less
+++ b/views/classy_cate.less
@@ -11,6 +11,10 @@
   max-width: 180px;
 }
 
+#page-content {
+  min-height : 200px;
+}
+
 .profile-image {
   max-width: 120px;
 }
@@ -101,6 +105,16 @@ td.set, td.due, td.spec, td.given {
 .exercise-navigation-btn i {
   line-height: 20px !important;
 }
+
+#exercise-nav {
+  float : right; display : inline; margin-top : 3px;
+  position : relative;
+}
+
+#term-selector {float : right;}
+#class-selector {float : left; margin-right : 15px;}
+#ex-go-btn {float : right;}
+#current-class {margin : 5px 0px 0px 0px;}
 
 #fade {
   background-color:black;
