--- a/views/classy_cate.coffee.erb
+++ b/views/classy_cate.coffee.erb
@@ -445,9 +445,24 @@ populate_main_page = (vars) ->
   $('#cc-other-extensions').attr('href', vars.extensions_link)
   $('#cc-other-documentation').attr('href', vars.documentation_link)
 
-  $('#cc-keyt').val(vars.keyt)
-  $('#cc-class-select').val(vars.default_class)
-  $('#cc-period-select').val(vars.default_period)
+  $('#class-selector li').bind 'click', ->
+    $('#current-class')
+      .text($(this).text())
+      .attr('value',$(this).find('a').attr('value'))
+  $('#ex-go-btn').bind 'click', ->
+    p = $('#term-selector .active').attr 'value'
+    c = $('#current-class').attr 'value'
+    kt = vars.keyt
+    url = "/timetable.cgi?period=#{p}&class=#{c}&keyt=#{kt}"
+    load_exercises_page(null, null, null, url)
+
+  if (period = parseInt vars.default_period)%2 == 0 then period = period - 1
+  $('#current-class').attr 'value', vars.default_class
+  $('#class-selector a').each ->
+    if $(this).attr('value') == vars.default_class
+      $('#current-class').text($(this).text()) 
+  $('#term-selector .btn').each ->
+    $(this).addClass('active') if $(this).attr('value') == period.toString()
 
 
 populate_exercises_page = (vars) ->
@@ -547,8 +562,11 @@ populate_exercises_page = (vars) ->
 
     module_header.append timeline_icon
 
-
-    
+  if Math.max((m.exercises.length for m in vars.modules)...) <= 0
+    no_modules = $('<div/>').css
+      textAlign : 'center', paddingTop : '50px', paddingBottom : '50px'
+    .append $('<div/ class="well">').append("<h4>There's no handins here!</h4>")
+    $('#page-content').append no_modules
 
   $('#back_term_btn').bind 'click', ->
       if PERIOD != 1 then load_exercises_page null, null, -1
@@ -673,7 +691,7 @@ load_grades_page = (e) ->
     populate_html('#page-content', GRADES_PAGE_HTML)
     populate_grades_page(grade_page_vars)
 
-load_exercises_page = (e, fallback, shifting) ->
+load_exercises_page = (e, fallback, shifting, url) ->
 
   get_period_from_href = (href) ->
     parseInt href.split('period=')[1][0]
@@ -697,13 +715,15 @@ load_exercises_page = (e, fallback, shifting) ->
     href = get_url_for_period PERIOD
   else if fallback?
     href = alter_href_by href, (-1)
+  else if url?
+    href = url
 
   PERIOD = get_period_from_href href
 
   load_cate_page href, (body) ->
     exercise_page_vars = extract_exercise_page_data body
     go_forth_and_multiply = true
-    if isHoliday(get_period_from_href href) and (not shifting?)
+    if isHoliday(get_period_from_href href) and (not shifting? or url?)
       noOfExercises = 0
       for m in exercise_page_vars.modules
         noOfExercises += m.exs.length if m.exs?
