Implemented timeline on dashboard.
Note bug in timeline with clashing function, not detecting when another
element is WITHIN itself. Sort that one out!

--- a/views/classy_cate.less
+++ b/views/classy_cate.less
@@ -165,3 +165,11 @@ div[class="tooltip-inner"] {
 .timeline_slider {
   position : relative; width : 100%;
 }
+
+#exercises_table th {
+  text-align : center;
+}
+
+#exercises_table .module {width : 23%;}
+#exercises_table .id_name {width : 40%;}
+
