--- a/views/exercises_page.haml
+++ b/views/exercises_page.haml
@@ -37,7 +37,7 @@
 
 %table#exercises_template.table.wide_table.module_table.table-striped.table-bordered.hidden
   %tr
-    %th ID
+    %th{:style => "width:200px"} ID
     %th Name
     %th Set On
     %th Due On
