--- a/views/main_page.haml
+++ b/views/main_page.haml
@@ -146,5 +146,35 @@
             %li
               %a{:value => "ext"} External
 
+%h3 Due in next week...
+%table#exercises_table.table.table-hover.wide_table.module_table.table-striped.table-bordered.hidden
+  %tr
+    %th.module{:style => 'text-align : left'} Module
+    %th.id_name{:style => 'text-align : left'} ID - Name
+    %th.small Due On
+    %th.small Spec Link
+    %th.small Given link
 
-#current_exercise_timeline
+%table
+  %tr#exercise_row_template.hidden
+    %td.id{:style => 'text-align : left'} NA
+    %td.name{:style => 'text-align : left'} NA
+    %td.due NA
+    %td.spec NA
+    %td.given NA
+
+
+#exercise_timeline.timeline_slider
+
+#givens-modal.modal.hide.fade
+  .modal-header#givens-modal-header
+    %button{:type => "button", :class => "close", :"data-dismiss" => "modal", :"aria-hidden" => "true"} &times;
+  .modal-body#givens-modal-body
+    %table.table.wide_table.table-striped.table-bordered#givens-table
+      %thead
+        %tr
+          %th.type TYPE
+      %tbody
+        %tr
+          %td
+          %td
