--- a/views/classy_cate.less
+++ b/views/classy_cate.less
@@ -173,3 +173,4 @@ div[class="tooltip-inner"] {
 #exercises_table .module {width : 23%;}
 #exercises_table .id_name {width : 40%;}
 
+.due_label {width : 45px;}
