Proposed version change -> 1.3

--- a/views/classy_cate.user.js.erb
+++ b/views/classy_cate.user.js.erb
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @name         Classy CATE - Timeline TESTING
+// @name         Classy CATE
 // @author       Peter Hamilton
 // @description  CATE Hurts eyes. This makes it hurt them less.
 // @version <%= settings.userscript_version %>
@@ -7,7 +7,7 @@
 // ==/UserScript==
 
 function main() {
-    window.classy_cate_script_version = "1.2";
+    window.classy_cate_script_version = "<%= settings.userscript_version %>";
     $('head').append('<script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>');
     //$('head').append('<script type="text/javascript" src="https://classy-cate.herokuapp.com/classy-cate.js"></script>');
     $('head').append('<script type="text/javascript" src="https://localhost:4567/classy-cate.js"></script>');  //dev mode
