--- a/views/classy_cate.user.js.erb
+++ b/views/classy_cate.user.js.erb
@@ -8,6 +8,7 @@
 
 function main() {
     window.classy_cate_script_version = "<%= settings.userscript_version %>";
+    $('img[src^="/icons"]').remove() // prune dead cate links
     $('head').append('<script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>');
     $('head').append('<script type="text/javascript" src="https://classy-cate-timeline-dev.herokuapp.com/classy-cate.js"></script>');
     //$('head').append('<script type="text/javascript" src="https://localhost:4567/classy-cate.js"></script>');  //dev mode
