Fixed dashboard bug (left in debug mode) and fixes colouring of the handin buttons

--- a/views/classy_cate.less
+++ b/views/classy_cate.less
@@ -87,6 +87,18 @@ th.grade-column {
   height : 30px;
 }
 
+#exercises_table > tbody > tr >  td {
+  vertical-align : middle;
+  .btn {
+    margin-right : 10px;
+    margin-left : 5px;
+  }
+}
+
+#exercises_template > tbody > tr > td {
+  vertical-align: middle;
+}
+
 td.id {
   width : 10%;
   text-align : center;
