Vertically aligns dashboard cells

--- a/views/classy_cate.less
+++ b/views/classy_cate.less
@@ -182,6 +182,10 @@ div[class="tooltip-inner"] {
   text-align : center;
 }
 
+#exercises_table td {
+  vertical-align: middle;
+}
+
 #exercises_table .module {width : 23%;}
 #exercises_table .id_name {width : 40%;}
 
